...
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    tools:context=".Presentacion.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".Presentacion.MainActivity">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/img_5"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:titleTextColor="@color/white" />
...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:iconifiedByDefault="false"
                    app:queryHint="Título"/>

                <Button
                    android:id="@+id/filterEjButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/blue"
                    android:text="Filtros"
                    android:maxLines="1"/>

            </LinearLayout>


            <LinearLayout
...

                <!-- ChipGroup para el filtro de grupo muscular -->
                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/EjMuscGroupChipGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:singleLine="true" />
                </HorizontalScrollView>

                <!-- Filtro de tipos de ejercicios -->
...

                <!-- ChipGroup para el filtro de tipos de ejercicios -->
                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/EjTipoEjChipGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:singleLine="true" />
                </HorizontalScrollView>
            </LinearLayout>

...
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </GridLayout>
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addButtonEjsFr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#A4D4FF"
            android:src="@drawable/baseline_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.954"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.86"
            tools:ignore="MissingConstraints"
            android:contentDescription="Crear Ejercicio" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
