...
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="2dp">
    </TextView>

    <EditText
        android:id="@+id/EjerTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="Titulo*"
...
            android:textSize="15sp"
            android:fontFamily="sans-serif-black"
            android:text="Grupo Muscular"/>


        <Spinner
            android:id="@+id/spinnerCrearEjGrupoMusc"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/transparent"/>
    </LinearLayout>

...
            android:layout_height="50dp"
            android:textSize="15sp"
            android:fontFamily="sans-serif-black"
            android:text="Tipo de Ejercicio" />

        <Spinner
            android:id="@+id/spinnerCrearEjTipoEj"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/transparent"/>
    </LinearLayout>

...
